# SoK_ppClustering

./: Dockerfile  README.md
data/: dataset.npy
hc_protocols/: CMakeLists.txt  README.md
hc_protocols/benchmarks/: hierarchical.cpp  utils.hpp
hc_protocols/cmake/: FindCNPY.cmake  FindPaillier.cmake
hc_protocols/include/mpo19/: channel.hpp  cluster.hpp  clustering.hpp  config.hpp  linkage.hpp  paillier_wrapper.hpp  pca.hpp  pcure.hpp  point.hpp  python.hpp  random.hpp  typedefs.hpp  utility.hpp
hc_protocols/python/: hello_ext.cpp  read_data.py
hc_protocols/src/: channel.cpp  cluster.cpp  linkage.cpp  mpo19.cpp  paillier_wrapper.cpp  pca.cpp  python.cpp  random.cpp
hc_protocols/tests/: CMakeLists.txt  channel_test.cpp  cluster_test.cpp  clustering_test.cpp  linkage_test.cpp  paillier_wrapper_test.cpp  pca_test.cpp  pca_test.hpp  point_test.cpp  random_test.cpp  utility_test.cpp
he_meanshift/: CMakeLists.txt  README.md  sample_config.ini
he_meanshift/benchmark/: CMakeLists.txt  cluster.cpp  plaintext_cluster.cpp  utils.cpp  utils.hpp
he_meanshift/cmake/: FindCNPY.cmake  FindGMP.cmake  FindNTL.cmake
he_meanshift/src/: CMakeLists.txt
he_meanshift/src/ckp19/: dataset.cpp  dataset.hpp  mean_shift.cpp  mean_shift.hpp  plaintext_clustering.cpp  plaintext_clustering.hpp
he_meanshift/test/: CMakeLists.txt  common.hpp  mean_shift.cpp  testrunner.cpp
utils/: README.md  ds_info.py  he_meanshift_evaluate.py  rand_dataset.py  sklearn_cluster.py  transform_dataset.py
utils/cluster/: algo.py  dataset.py  score.py
